--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button>Quero Ajudar</button>
     </header>
 
-    <section class="form">
+    <section class="form hide">
         <h2>Entre na lista de doadores</h2>
         <form action="/">
             <input 
@@ -75,6 +75,7 @@
 
     <footer>Maratona Dev! </footer>
 
+    <script src="scripts.js"></script>
 
 </body>
 
